--- a/practice.html
+++ b/practice.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <style>
-      header {background-color: tomato;}
+      header {background-color: light blue;}
       main {background-color: yellow;}
       section {background-color: green;}
       footer {background-color: blue;}
@@ -21,6 +21,6 @@
     <h2>News Story 3</h2>
     <p>Content here...</p>
     <p>Thanks for Visiting</p>
-    <p>(c) by Noone...</p>
+    <p>(c) by No one...</p>
   </body>
 </html>
