--- a/practice.html
+++ b/practice.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8">
+    
     <style>
-      header {background-color: tomato;}
+      header {background-color: cyan;}
       main {background-color: yellow;}
       section {background-color: green;}
       footer {background-color: blue;}
       aside {background-color: purple;}
     </style>
+
   </head>
+
   <body>
     <h1>Welcome to my Website!</h1>
     <p>Lorem ipsum dolor sit amet...</p>
@@ -21,6 +26,7 @@
     <h2>News Story 3</h2>
     <p>Content here...</p>
     <p>Thanks for Visiting</p>
-    <p>(c) by Noone...</p>
+    <p>(c) by No one...</p>
   </body>
+
 </html>
