--- a/week 4/bootstrap_demo1.html
+++ b/week 4/bootstrap_demo1.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Basics</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA4PB8hE8pKj5T9P0pLtrHgI5xNJYz8cCf5F5R8uF3wG5AKF2w6kVmgE7OgQ96" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello, Bootstrap!</h1>
-    <p>This is my first Bootstrap page.</p>
+
+    <div class="container-fluid">
+        <div class="row">
+          <div class="p-3 text-white text-center" style="background-color: #5e0c98;">
+            <h1>My Favourite Cats</h1>
+          </div>
+        </div>
+    
+    <!-- Carousel Section -->
+    <div class="container-fluid vh-100 d-flex flex-column">
+    <div id="catCarousel" class="carousel slide flex-grow-1" data-bs-ride="carousel">
+      <div class="carousel-inner h-100">
+
+        <!-- First Slide -->
+        <div class="carousel-item active">
+          <!-- Add your first image URL here -->
+          <img src="ragamuffin.jpeg" class="d-block w-100" alt="Cat 1">
+        </div>
+
+        <!-- Second Slide -->
+        <div class="carousel-item">
+          <!-- Add your second image URL here -->
+          <img src="image2.jpg" class="d-block w-100" alt="Cat 2">
+        </div>
+
+        <!-- Third Slide -->
+        <div class="carousel-item">
+          <!-- Add your third image URL here -->
+          <img src="image3.jpg" class="d-block w-100" alt="Cat 3">
+        </div>
+
+      </div>
+
+      <!-- Carousel Controls -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#catCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#catCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    </div>
+            
   </body>
 </html>
